[gd_scene load_steps=24 format=2]

[ext_resource path="res://principal.gd" type="Script" id=1]
[ext_resource path="res://escenas/carta0.tscn" type="PackedScene" id=2]
[ext_resource path="res://imagen/malo1.png" type="Texture" id=3]
[ext_resource path="res://imagen/mago.png" type="Texture" id=4]
[ext_resource path="res://fuentes/Firestarter.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://imagen/malo2.png" type="Texture" id=6]
[ext_resource path="res://imagen/malo3.png" type="Texture" id=7]
[ext_resource path="res://imagen/malo4.png" type="Texture" id=8]
[ext_resource path="res://imagen/magia1.png" type="Texture" id=9]
[ext_resource path="res://imagen/magia2.png" type="Texture" id=10]
[ext_resource path="res://imagen/fondo-verde-1.png" type="Texture" id=11]
[ext_resource path="res://imagen/Night and Day Loop 1.ogg" type="AudioStream" id=12]
[ext_resource path="res://imagen/Aplausos.mp3" type="AudioStream" id=13]
[ext_resource path="res://imagen/Portal.mp3" type="AudioStream" id=14]
[ext_resource path="res://imagen/game.mp3" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 816, 216 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "cama2"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.015, 1.015 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "cama3"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1.3, 1.3 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "cama4"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 1.45, 1.45 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "gameOver"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 816, 216 ), Vector2( 370, 252 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "ganar"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1.1, 2.2, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.45, 1.45 ), Vector2( 1.2, 1.5 ), Vector2( 1.1, 0.95 ), Vector2( 0.1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 1.1, 2.2, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 793.7, 217.8 ), Vector2( 782, 250 ), Vector2( 808, 286 ), Vector2( 992, 25 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 1.1, 2.2, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -7.91169, 11.3226, 166.662 ]
}

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[node name="principal" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 306.125, 261.5 )
scale = Vector2( 3.90092, 5.09028 )
texture = ExtResource( 11 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 936, 261 )
scale = Vector2( 3.90092, 5.09028 )
texture = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 557, 240 )
frames = SubResource( 8 )

[node name="malos" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="malos"]
position = Vector2( 816, 216 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="malos"]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 1 )
anims/cama2 = SubResource( 4 )
anims/cama3 = SubResource( 5 )
anims/cama4 = SubResource( 6 )
anims/gameOver = SubResource( 2 )
anims/ganar = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 200, 218 )
scale = Vector2( 0.934286, 0.876923 )
texture = ExtResource( 4 )

[node name="carta0" parent="." instance=ExtResource( 2 )]
margin_left = 180.0
margin_top = 374.0
margin_right = 350.0
margin_bottom = 590.0

[node name="Label" type="Label" parent="."]
margin_left = 353.0
margin_top = 37.0
margin_right = 405.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )

[node name="t1_presentacion" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="t2_elegir" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true

[node name="Apla" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Magia" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="go" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[connection signal="animation_finished" from="malos/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="button_up" from="carta0" to="." method="_on_carta0_button_up"]
[connection signal="timeout" from="t1_presentacion" to="." method="_on_t1_presentacion_timeout"]
[connection signal="timeout" from="t2_elegir" to="." method="_on_t2_elegir_timeout"]
